# tiers

./: LICENSE  README.md  pyproject.toml
docs/: demo.ipynb
docs/drawio/: readme_grouping.drawio
src/tiers/: __init__.py
tests/: conftest.py  test.ipynb  test_functions.py  test_tiers.py
tests/data/: abb_map.txt  all_gaps.csv  all_levels.csv  all_taxa_table.csv  ancestor_as_label.csv  fillable_gaps.csv  fillable_gaps_not.csv  full_taxa_table.csv  large_gaps.csv  large_taxa_table.csv  leaf_in_cols.csv  long_taxa_table.csv  only_one_branch.csv  presence.csv  redundant_labels.csv  reoccuring_value.csv  simple_in_cols.csv  simple_table.csv  taxa_table.csv  taxa_table_no_labels.csv  very_simple.csv
