[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiers"
version = "0.0.2"
authors = [
  { name="Mikko Impiö", email="mikko.impio@gmail.com" },
]
description = "A hierarchical label handling library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bigtree",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/mikkoim/tiers"
Issues = "https://github.com/mikkoim/tiers/issues"